// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast component default renders correctly 1`] = `
<Toast__Wrapper>
  <Toast__Container
    color="brand-secondary"
    data-e2e="toastMessage"
  >
    <Toast__Content>
      <span>
        Default
      </span>
    </Toast__Content>
    <Toast__CloseIcon
      color="gray-4"
      cursor={true}
      data-e2e="toastMessageClose"
      name="close"
      onClick={[Function]}
      size="14px"
      weight={600}
    />
  </Toast__Container>
</Toast__Wrapper>
`;

exports[`Toast component error renders correctly 1`] = `
<Toast__Wrapper>
  <Toast__Container
    color="error"
    data-e2e="toastMessage"
  >
    <Toast__Content>
      <span>
        Default
      </span>
    </Toast__Content>
    <Toast__CloseIcon
      color="gray-4"
      cursor={true}
      data-e2e="toastMessageClose"
      name="close"
      onClick={[Function]}
      size="14px"
      weight={600}
    />
  </Toast__Container>
</Toast__Wrapper>
`;

exports[`Toast component success renders correctly 1`] = `
<Toast__Wrapper>
  <Toast__Container
    color="success"
    data-e2e="toastMessage"
  >
    <Toast__Content>
      <span>
        Default
      </span>
    </Toast__Content>
    <Toast__CloseIcon
      color="gray-4"
      cursor={true}
      data-e2e="toastMessageClose"
      name="close"
      onClick={[Function]}
      size="14px"
      weight={600}
    />
  </Toast__Container>
</Toast__Wrapper>
`;
